--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             z-index: 1000;
-            padding: 20px 0;
+            padding: 15px 0;
             transition: transform 0.3s;
         }
 
@@ -40,7 +40,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 20px;
+            padding: 0 15px;
         }
 
         .logo {
@@ -49,16 +49,20 @@
         }
 
         .logo img {
-            height: 70px; /* Ограничение высоты логотипа */
+            height: 60px;
             transition: transform 0.3s;
         }
 
         .logo img:hover {
-            transform: scale(1.1); /* Легкий ховер-эффект */
+            transform: scale(1.1);
+        }
+
+        .nav-links {
+            display: flex;
         }
 
         .nav-links a {
-            margin-left: 25px;
+            margin-left: 20px;
             text-decoration: none;
             color: #1a3c34;
             font-weight: 400;
@@ -86,9 +90,36 @@
             color: #2e7d32;
         }
 
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background: #1a3c34;
+            margin: 2px 0;
+            transition: all 0.3s;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -7px);
+        }
+
         /* Hero Section */
         .hero {
-            height: 100vh;
+            height: 70vh;
             background: url('images/hero-bg.jpg') no-repeat center/cover;
             display: flex;
             align-items: center;
@@ -114,34 +145,35 @@
             position: relative;
             z-index: 2;
             max-width: 900px;
-            padding: 20px;
+            padding: 15px;
         }
 
         .hero-content h1 {
             font-family: 'Playfair Display', serif;
-            font-size: 64px;
-            margin-bottom: 20px;
+            font-size: 48px;
+            margin-bottom: 15px;
             line-height: 1.2;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .hero-content p {
-            font-size: 20px;
-            margin-bottom: 40px;
+            font-size: 18px;
+            margin-bottom: 30px;
             font-weight: 300;
         }
 
         .cta-button {
             display: inline-block;
-            padding: 15px 40px;
+            padding: 12px 30px;
             background: #2e7d32;
             color: #fff;
             text-decoration: none;
             border-radius: 50px;
             font-weight: 700;
-            font-size: 18px;
+            font-size: 16px;
             transition: transform 0.3s, box-shadow 0.3s;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            touch-action: manipulation;
         }
 
         .cta-button:hover {
@@ -164,7 +196,7 @@
 
         /* Products Section */
         .products {
-            padding: 100px 20px;
+            padding: 60px 15px;
             max-width: 1400px;
             margin: 0 auto;
             text-align: center;
@@ -173,36 +205,36 @@
 
         .products h2 {
             font-family: 'Playfair Display', serif;
-            font-size: 48px;
-            margin-bottom: 60px;
+            font-size: 36px;
+            margin-bottom: 40px;
             color: #1a3c34;
         }
 
         .product-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
         }
 
         .product-card {
             background: #fff;
-            border-radius: 15px;
+            border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
             transition: transform 0.4s, box-shadow 0.4s;
             position: relative;
         }
 
         .product-card img {
             width: 100%;
-            height: 250px;
+            height: 200px;
             object-fit: cover;
             transition: transform 0.4s;
         }
 
         .product-card:hover {
-            transform: translateY(-15px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
         }
 
         .product-card:hover img {
@@ -211,15 +243,15 @@
 
         .product-card h3 {
             font-family: 'Playfair Display', serif;
-            font-size: 24px;
-            margin: 20px 0 10px;
+            font-size: 22px;
+            margin: 15px 0 10px;
             color: #1a3c34;
         }
 
         .product-card p {
-            font-size: 16px;
+            font-size: 15px;
             color: #666;
-            padding: 0 20px 25px;
+            padding: 0 15px 20px;
             line-height: 1.5;
         }
 
@@ -245,7 +277,7 @@
             color: #fff;
             text-decoration: none;
             font-weight: 700;
-            padding: 10px 20px;
+            padding: 8px 15px;
             border: 2px solid #fff;
             border-radius: 5px;
             transition: background 0.3s;
@@ -258,7 +290,7 @@
 
         /* About Section */
         .about {
-            padding: 100px 20px;
+            padding: 60px 15px;
             background: linear-gradient(135deg, #e8f5e9, #f1f8e9);
             text-align: center;
             position: relative;
@@ -266,39 +298,34 @@
 
         .about h2 {
             font-family: 'Playfair Display', serif;
-            font-size: 48px;
-            margin-bottom: 30px;
+            font-size: 36px;
+            margin-bottom: 20px;
             color: #1a3c34;
         }
 
         .about p {
             max-width: 900px;
             margin: 0 auto;
-            font-size: 18px;
+            font-size: 16px;
             color: #555;
-            line-height: 1.8;
+            line-height: 1.6;
         }
 
         .about-image {
-            position: absolute;
-            top: 20%;
-            left: 10%;
-            width: 200px;
-            opacity: 0.2;
-            z-index: 0;
+            display: none;
         }
 
         /* Footer */
         footer {
-            padding: 60px 20px;
+            padding: 40px 15px;
             background: #1a3c34;
             color: #fff;
             text-align: center;
         }
 
         footer p {
-            font-size: 16px;
-            margin-bottom: 10px;
+            font-size: 14px;
+            margin-bottom: 8px;
         }
 
         footer a {
@@ -311,31 +338,96 @@
             color: #fff;
         }
 
-        /* Responsive */
+        /* Mobile Responsive */
         @media (max-width: 768px) {
-            .hero-content h1 {
-                font-size: 48px;
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                height: 100vh;
+                width: 70%;
+                background: #fff;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                transition: right 0.3s ease-in-out;
+                box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
             }
 
-            .hero-content p {
-                font-size: 16px;
+            .nav-links.active {
+                right: 0;
             }
 
             .nav-links a {
-                margin-left: 15px;
+                margin: 15px 0;
+                font-size: 18px;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .hero {
+                height: 60vh;
+            }
+
+            .hero-content h1 {
+                font-size: 32px;
+            }
+
+            .hero-content p {
                 font-size: 14px;
             }
 
-            .products h2, .about h2 {
-                font-size: 36px;
+            .cta-button {
+                padding: 10px 25px;
+                font-size: 14px;
+            }
+
+            .products {
+                padding: 40px 10px;
+            }
+
+            .products h2 {
+                font-size: 28px;
             }
 
             .product-card img {
-                height: 200px;
+                height: 180px;
+            }
+
+            .about {
+                padding: 40px 10px;
+            }
+
+            .about h2 {
+                font-size: 28px;
             }
 
             .logo img {
-                height: 55px; /* Меньший размер логотипа на мобильных */
+                height: 50px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero-content h1 {
+                font-size: 24px;
+            }
+
+            .hero-content p {
+                font-size: 12px;
+            }
+
+            .products h2, .about h2 {
+                font-size: 24px;
+            }
+
+            .product-card h3 {
+                font-size: 18px;
+            }
+
+            .product-card p {
+                font-size: 14px;
             }
         }
     </style>
@@ -348,6 +440,11 @@
                 <a href="https://allgameg87.github.io/Molzavod/">
                     <img src="images/logo.png" alt="Чистые Луга">
                 </a>
+            </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
             <div class="nav-links">
                 <a href="#home">Главная</a>
@@ -401,7 +498,6 @@
 
     <!-- About Section -->
     <section class="about" id="about">
-        <img class="about-image" src="images/farm-bg.jpg" alt="Ферма">
         <h2>О нас</h2>
         <p>Молочный завод "Чистые Луга" – это семейное предприятие, основанное в 1995 году. Мы производим натуральные молочные продукты, заботясь о каждом этапе: от экологически чистых пастбищ до современной упаковки. Наша миссия – дарить здоровье и радость через вкусные и полезные продукты.</p>
     </section>
@@ -416,6 +512,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script>
+        // Hamburger Menu
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+
+        // Close menu when clicking a link
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+            });
+        });
+
         // Smooth Scroll
         document.querySelectorAll('.nav-links a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
@@ -436,100 +549,83 @@
             }
         });
 
-        // GSAP Animations
-        // Hero Section
-        gsap.from('.hero-content h1', {
-            opacity: 0,
-            y: 100,
-            duration: 1.5,
-            ease: 'power4.out'
-        });
+        // Simplified GSAP Animations for Mobile
+        if (window.innerWidth > 768) {
+            // Hero Section
+            gsap.from('.hero-content h1', {
+                opacity: 0,
+                y: 50,
+                duration: 1,
+                ease: 'power2.out'
+            });
 
-        gsap.from('.hero-content p', {
-            opacity: 0,
-            y: 50,
-            duration: 1.5,
-            delay: 0.3,
-            ease: 'power4.out'
-        });
+            gsap.from('.hero-content p', {
+                opacity: 0,
+                y: 30,
+                duration: 1,
+                delay: 0.2,
+                ease: 'power2.out'
+            });
 
-        gsap.from('.cta-button', {
-            opacity: 0,
-            scale: 0.8,
-            duration: 1,
-            delay: 0.6,
-            ease: 'back.out(1.7)'
-        });
+            gsap.from('.cta-button', {
+                opacity: 0,
+                scale: 0.9,
+                duration: 0.8,
+                delay: 0.4,
+                ease: 'back.out(1.7)'
+            });
 
-        // Parallax Effect
-        gsap.to('.parallax-bg', {
-            scrollTrigger: {
-                trigger: '.hero',
-                scrub: true,
-                start: 'top top',
-                end: 'bottom top'
-            },
-            yPercent: 20,
-            ease: 'none'
-        });
+            // Parallax Effect
+            gsap.to('.parallax-bg', {
+                scrollTrigger: {
+                    trigger: '.hero',
+                    scrub: true,
+                    start: 'top top',
+                    end: 'bottom top'
+                },
+                yPercent: 15,
+                ease: 'none'
+            });
 
-        // Products Section
-        gsap.from('.product-card', {
-            scrollTrigger: {
-                trigger: '.products',
-                start: 'top 80%',
-                toggleActions: 'play none none none'
-            },
-            opacity: 0,
-            y: 100,
-            stagger: 0.3,
-            duration: 1.2,
-            ease: 'power3.out'
-        });
+            // Products Section
+            gsap.from('.product-card', {
+                scrollTrigger: {
+                    trigger: '.products',
+                    start: 'top 80%',
+                    toggleActions: 'play none none none'
+                },
+                opacity: 0,
+                y: 50,
+                stagger: 0.2,
+                duration: 0.8,
+                ease: 'power2.out'
+            });
+        } else {
+            // Minimal animations for mobile
+            gsap.from('.hero-content', {
+                opacity: 0,
+                duration: 0.8,
+                ease: 'power2.out'
+            });
 
-        // About Section
-        gsap.from('.about h2', {
-            scrollTrigger: {
-                trigger: '.about',
-                start: 'top 80%'
-            },
-            opacity: 0,
-            x: -100,
-            duration: 1,
-            ease: 'power3.out'
-        });
-
-        gsap.from('.about p', {
-            scrollTrigger: {
-                trigger: '.about',
-                start: 'top 80%'
-            },
-            opacity: 0,
-            x: 100,
-            duration: 1,
-            delay: 0.3,
-            ease: 'power3.out'
-        });
-
-        // Footer Animation
-        gsap.from('footer p', {
-            scrollTrigger: {
-                trigger: 'footer',
-                start: 'top 90%'
-            },
-            opacity: 0,
-            y: 50,
-            stagger: 0.2,
-            duration: 1,
-            ease: 'power2.out'
-        });
+            gsap.from('.product-card', {
+                scrollTrigger: {
+                    trigger: '.products',
+                    start: 'top 90%',
+                    toggleActions: 'play none none none'
+                },
+                opacity: 0,
+                duration: 0.5,
+                stagger: 0.1
+            });
+        }
 
         // Logo Animation
         gsap.from('.logo img', {
             opacity: 0,
-            x: -50,
-            duration: 1,
-            ease: 'power3.out'
+            x: -30,
+            duration: 0.8,
+            ease: 'power2.out'
         });
     </script>
 </body>
