--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 
         .logo img {
             height: 70px;
-            transition: transform 0.3s;
         }
 
         .nav-links a {
@@ -231,7 +230,7 @@
             transform: translateY(0);
             display: flex;
             flex-direction: column;
-            height: 400px; /* Fixed height for uniformity */
+            height: 400px;
         }
 
         .product-card img {
@@ -239,7 +238,7 @@
             height: 250px;
             object-fit: cover;
             transition: transform 0.4s;
-            loading: lazy;
+            flex: 0 0 auto;
         }
 
         .product-card:hover {
@@ -254,7 +253,7 @@
         .product-card h3 {
             font-family: 'Playfair Display', serif;
             font-size: 24px;
-            margin: 20px 0 10px;
+            margin: 20px 20px 10px;
             color: #1a3c34;
             flex: 0 0 auto;
         }
@@ -262,14 +261,12 @@
         .product-card p {
             font-size: 16px;
             color: #666;
-            padding: 0 20px 25px;
+            padding: 0 20px 20px;
             line-height: 1.5;
-            flex: 1 0 auto;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            flex: 1 1 auto;
+            display: flex;
+            align-items: flex-start;
+            margin: 0;
         }
 
         .product-overlay {
@@ -417,35 +414,41 @@
             top: 90px;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(15px);
             display: none;
             flex-direction: column;
-            padding: 20px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
             z-index: 999;
-            transition: transform 0.3s ease-out;
+            transition: transform 0.3s ease-out, opacity 0.3s ease-out;
             transform: translateY(-100%);
+            opacity: 0;
         }
 
         .mobile-menu.active {
             display: flex;
             transform: translateY(0);
+            opacity: 1;
         }
 
         .mobile-menu a {
-            padding: 15px 0;
+            padding: 18px 10px;
             text-decoration: none;
             color: #1a3c34;
             font-weight: 400;
             font-size: 18px;
             border-bottom: 1px solid #e0e0e0;
             transition: color 0.3s, background 0.2s;
+            border-radius: 8px;
+            margin-bottom: 5px;
+            text-align: center;
         }
 
         .mobile-menu a:hover, .mobile-menu a:active {
             color: #2e7d32;
             background: rgba(46, 125, 50, 0.1);
+            border-bottom-color: #2e7d32;
         }
 
         .mobile-menu a:last-child {
@@ -508,7 +511,7 @@
 
             /* Products Section */
             .products {
-                padding: 60px 15px;
+                padding: 60px 10px;
             }
 
             .products h2 {
@@ -518,13 +521,15 @@
 
             .product-grid {
                 grid-template-columns: 1fr;
-                gap: 20px;
+                gap: 25px;
+                max-width: 400px;
+                margin: 0 auto;
             }
 
             .product-card {
                 margin: 0 auto;
-                max-width: 350px;
-                height: 380px; /* Uniform height for mobile */
+                max-width: 100%;
+                height: 380px;
             }
 
             .product-card img {
@@ -533,11 +538,12 @@
 
             .product-card h3 {
                 font-size: 20px;
+                margin: 15px 15px 10px;
             }
 
             .product-card p {
                 font-size: 14px;
-                padding: 0 15px 20px;
+                padding: 0 15px 15px;
             }
 
             /* About Section */
@@ -605,14 +611,18 @@
                 height: 360px;
             }
 
+            .product-card img {
+                height: 180px;
+            }
+
             .product-card h3 {
                 font-size: 18px;
-                margin: 15px 0 8px;
+                margin: 12px 12px 8px;
             }
 
             .product-card p {
                 font-size: 13px;
-                padding: 0 15px 15px;
+                padding: 0 12px 12px;
             }
 
             .cta-button {
@@ -640,7 +650,12 @@
             }
 
             .products {
-                padding: 50px 10px;
+                padding: 50px 8px;
+            }
+
+            .product-grid {
+                max-width: 350px;
+                gap: 20px;
             }
 
             .about {
@@ -648,7 +663,12 @@
             }
 
             footer {
-                padding: 30px 10px;
+                padding: 30px 8px;
+            }
+
+            .product-grid {
+                max-width: 320px;
+                gap: 15px;
             }
         }
 
@@ -667,6 +687,20 @@
 
             .product-card {
                 height: 340px;
+            }
+
+            .product-card img {
+                height: 170px;
+            }
+
+            .product-card h3 {
+                font-size: 16px;
+                margin: 10px 10px 6px;
+            }
+
+            .product-card p {
+                font-size: 12px;
+                padding: 0 10px 10px;
             }
 
             .cta-button {
@@ -975,42 +1009,6 @@
             x: -50,
             duration: 1,
             ease: 'power3.out'
-        });
-
-        // Logo Hover/Tap Animation (Scale Only)
-        const logoImg = document.querySelector('.logo img');
-        logoImg.addEventListener('mouseenter', () => {
-            gsap.to(logoImg, {
-                scale: 1.3,
-                duration: 0.3,
-                ease: 'power2.out'
-            });
-        });
-
-        logoImg.addEventListener('mouseleave', () => {
-            gsap.to(logoImg, {
-                scale: 1,
-                duration: 0.3,
-                ease: 'power2.out'
-            });
-        });
-
-        // Support touch devices for logo animation
-        logoImg.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            gsap.to(logoImg, {
-                scale: 1.3,
-                duration: 0.3,
-                ease: 'power2.out'
-            });
-        });
-
-        logoImg.addEventListener('touchend', () => {
-            gsap.to(logoImg, {
-                scale: 1,
-                duration: 0.3,
-                ease: 'power2.out'
-            });
         });
     </script>
 </body>
