--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
         .mobile-menu {
             position: fixed;
-            top: 90px;
+            top: 80px;
             left: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.98);
@@ -420,7 +420,7 @@
             flex-direction: column;
             padding: 15px;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
-            z-index: 999;
+            z-index: 1001;
             transition: transform 0.3s ease-out, opacity 0.3s ease-out;
             transform: translateY(-100%);
             opacity: 0;
@@ -472,6 +472,11 @@
             }
         }
 
+        /* Prevent content overlap when mobile menu is open */
+        body.mobile-menu-open {
+            overflow: hidden;
+        }
+
         /* Responsive */
         @media (max-width: 768px) {
             /* Navigation */
@@ -521,13 +526,14 @@
 
             .product-grid {
                 grid-template-columns: 1fr;
-                gap: 25px;
+                gap: 30px;
                 max-width: 400px;
                 margin: 0 auto;
+                padding: 0 15px;
             }
 
             .product-card {
-                margin: 0 auto;
+                margin: 0 auto 20px;
                 max-width: 100%;
                 height: 380px;
             }
@@ -582,11 +588,15 @@
 
             /* Header */
             header {
-                padding: 15px 0;
+                padding: 12px 0;
             }
 
             nav {
                 padding: 0 15px;
+            }
+
+            .mobile-menu {
+                top: 65px;
             }
         }
 
@@ -609,6 +619,7 @@
             .product-card {
                 max-width: 100%;
                 height: 360px;
+                margin: 0 auto 15px;
             }
 
             .product-card img {
@@ -636,8 +647,8 @@
             }
 
             .mobile-menu {
-                top: 70px;
-                padding: 15px;
+                top: 60px;
+                padding: 12px;
             }
 
             .mobile-menu a {
@@ -655,7 +666,8 @@
 
             .product-grid {
                 max-width: 350px;
-                gap: 20px;
+                gap: 25px;
+                padding: 0 10px;
             }
 
             .about {
@@ -668,7 +680,8 @@
 
             .product-grid {
                 max-width: 320px;
-                gap: 15px;
+                gap: 20px;
+                padding: 0 8px;
             }
         }
 
@@ -687,6 +700,7 @@
 
             .product-card {
                 height: 340px;
+                margin: 0 auto 12px;
             }
 
             .product-card img {
@@ -848,6 +862,7 @@
         mobileMenuToggle.addEventListener('click', () => {
             mobileMenuToggle.classList.toggle('active');
             mobileMenu.classList.toggle('active');
+            document.body.classList.toggle('mobile-menu-open');
         });
 
         // Close mobile menu when clicking on a link
@@ -855,6 +870,7 @@
             link.addEventListener('click', () => {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                document.body.classList.remove('mobile-menu-open');
             });
         });
 
@@ -863,6 +879,7 @@
             if (!mobileMenuToggle.contains(e.target) && !mobileMenu.contains(e.target)) {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                document.body.classList.remove('mobile-menu-open');
             }
         });
 
@@ -871,6 +888,7 @@
             if (window.innerWidth > 768) {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                document.body.classList.remove('mobile-menu-open');
             }
         });
 
