--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
             font-family: 'Roboto', sans-serif;
         }
 
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
         html {
             scroll-behavior: smooth;
             scroll-padding-top: 100px;
+            overflow-x: hidden;
+            max-width: 100vw;
         }
 
         body {
@@ -23,6 +29,8 @@
             background: #f8f9fa;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            max-width: 100vw;
+            position: relative;
         }
 
         /* Touch improvements */
@@ -119,6 +127,8 @@
             color: #fff;
             position: relative;
             overflow: hidden;
+            width: 100%;
+            max-width: 100vw;
         }
 
         .hero::before {
@@ -204,6 +214,8 @@
             margin: 0 auto;
             text-align: center;
             background: #fff;
+            width: 100%;
+            overflow: hidden;
         }
 
         .products h2 {
@@ -310,6 +322,8 @@
             background: linear-gradient(135deg, #e8f5e9, #f1f8e9);
             text-align: center;
             position: relative;
+            width: 100%;
+            overflow: hidden;
         }
 
         .about h2 {
@@ -472,6 +486,25 @@
             }
         }
 
+        /* Mobile menu overlay */
+        .mobile-menu-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+        }
+
+        .mobile-menu-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
         /* Prevent content overlap when mobile menu is open */
         body.mobile-menu-open {
             overflow: hidden;
@@ -526,10 +559,10 @@
 
             .product-grid {
                 grid-template-columns: 1fr;
-                gap: 30px;
+                gap: 40px;
                 max-width: 400px;
                 margin: 0 auto;
-                padding: 0 15px;
+                padding: 0 20px;
             }
 
             .product-card {
@@ -666,8 +699,8 @@
 
             .product-grid {
                 max-width: 350px;
-                gap: 25px;
-                padding: 0 10px;
+                gap: 35px;
+                padding: 0 15px;
             }
 
             .about {
@@ -680,8 +713,8 @@
 
             .product-grid {
                 max-width: 320px;
-                gap: 20px;
-                padding: 0 8px;
+                gap: 30px;
+                padding: 0 12px;
             }
         }
 
@@ -750,6 +783,7 @@
                 <span></span>
             </div>
         </nav>
+        <div class="mobile-menu-overlay"></div>
         <div class="mobile-menu">
             <a href="#home">Главная</a>
             <a href="#products">Продукты</a>
@@ -858,10 +892,12 @@
         // Mobile Menu Toggle
         const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
         const mobileMenu = document.querySelector('.mobile-menu');
+        const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
 
         mobileMenuToggle.addEventListener('click', () => {
             mobileMenuToggle.classList.toggle('active');
             mobileMenu.classList.toggle('active');
+            mobileMenuOverlay.classList.toggle('active');
             document.body.classList.toggle('mobile-menu-open');
         });
 
@@ -870,6 +906,7 @@
             link.addEventListener('click', () => {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                mobileMenuOverlay.classList.remove('active');
                 document.body.classList.remove('mobile-menu-open');
             });
         });
@@ -879,8 +916,17 @@
             if (!mobileMenuToggle.contains(e.target) && !mobileMenu.contains(e.target)) {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                mobileMenuOverlay.classList.remove('active');
                 document.body.classList.remove('mobile-menu-open');
             }
+        });
+
+        // Close mobile menu when clicking on overlay
+        mobileMenuOverlay.addEventListener('click', () => {
+            mobileMenuToggle.classList.remove('active');
+            mobileMenu.classList.remove('active');
+            mobileMenuOverlay.classList.remove('active');
+            document.body.classList.remove('mobile-menu-open');
         });
 
         // Close mobile menu on window resize
@@ -888,6 +934,7 @@
             if (window.innerWidth > 768) {
                 mobileMenuToggle.classList.remove('active');
                 mobileMenu.classList.remove('active');
+                mobileMenuOverlay.classList.remove('active');
                 document.body.classList.remove('mobile-menu-open');
             }
         });
