--- a/index.html
+++ b/index.html
@@ -3000,11 +3000,12 @@
             <div class="menu-header">
                 <h3>Навигация</h3>
             </div>
-            <a href="#home">Главная</a>
-            <a href="#products">Продукты</a>
-            <a href="Pelageia/katalog.html">Каталог</a>
-            <a href="#about">О нас</a>
-            <a href="#contacts">Контакты</a>
+            <a href="https://allgameg87.github.io/Molzavod">Главная</a>
+            <a href="https://allgameg87.github.io/Molzavod#products">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
+            <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
+            <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
+            <a href="https://allgameg87.github.io/Molzavod/serf">Сертификаты</a>
         </div>
     </header>
 
