--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -1306,12 +1306,12 @@
             <div class="menu-header">
                 <h3>Навигация</h3>
             </div>
-            <a href="../index.html">Главная</a>
-            <a href="../index.html#products">Продукты</a>
-            <a href="../Pelageia/katalog.html">Каталог</a>
-            <a href="../o nas/onas.html">О нас</a>
-            <a href="#contacts">Контакты</a>
-            <a href="../sertifikat/serf.html">Сертификаты</a>
+            <a href="https://allgameg87.github.io/Molzavod">Главная</a>
+            <a href="https://allgameg87.github.io/Molzavod#products">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
+            <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
+            <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
+            <a href="https://allgameg87.github.io/Molzavod/serf">Сертификаты</a>
         </div>
     </header>
 
