--- a/katalog/index.html
+++ b/katalog/index.html
@@ -3324,11 +3324,12 @@
             <div class="menu-header">
                 <h3>Навигация</h3>
             </div>
-            <a href="../index.html">Главная</a>
-            <a href="#catalog">Каталог</a>
-            <a href="#about">О нас</a>
-            <a href="#contacts">Контакты</a>
-            <a href="../sertifikat/serf.html">Сертификаты</a>
+            <a href="https://allgameg87.github.io/Molzavod">Главная</a>
+            <a href="https://allgameg87.github.io/Molzavod#products">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
+            <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
+            <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
+            <a href="https://allgameg87.github.io/Molzavod/serf">Сертификаты</a>
         </div>
     </header>
 
