--- a/onas/index.html
+++ b/onas/index.html
@@ -1072,7 +1072,7 @@
                 <h3>Навигация</h3>
             </div>
             <a href="https://allgameg87.github.io/Molzavod">Главная</a>
-            <a href="https://allgameg87.github.io/Molzavod#products">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod">Продукты</a>
             <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
             <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
             <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
