--- a/serf/index.html
+++ b/serf/index.html
@@ -486,12 +486,12 @@
         <div class="mobile-menu" role="navigation">
             <div class="menu-close-btn"><span></span><span></span></div>
             <div class="menu-header"><h3>Навигация</h3></div>
-            <a href="../index/index.html#home">Главная</a>
-            <a href="../index/index.html#products">Продукты</a>
-            <a href="../Pelageia/katalog.html">Каталог</a>
-            <a href="../index/index.html#about">О нас</a>
-            <a href="../index/index.html#contacts">Контакты</a>
-            <a href="#certificates">Сертификаты</a>
+            <a href="https://allgameg87.github.io/Molzavod">Главная</a>
+            <a href="https://allgameg87.github.io/Molzavod">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
+            <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
+            <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
+            <a href="https://allgameg87.github.io/Molzavod/serf">Сертификаты</a>
         </div>
     </header>
 
