--- a/index.html
+++ b/index.html
@@ -2980,10 +2980,10 @@
             </div>
             <div class="nav-links">
                 <a href="#home">Главная</a>
-                <a href="#products">Продукты</a>
-                <a href="Pelageia/katalog.html">Каталог</a>
-                <a href="#about">О нас</a>
-                <a href="#contacts">Контакты</a>
+                <a href="https://allgameg87.github.io/Molzavod/katalog">Продукты</a>
+                <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
+                <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
+                <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
             </div>
             <div class="mobile-menu-toggle">
                 <span></span>
@@ -3001,7 +3001,7 @@
                 <h3>Навигация</h3>
             </div>
             <a href="https://allgameg87.github.io/Molzavod">Главная</a>
-            <a href="https://allgameg87.github.io/Molzavod">Продукты</a>
+            <a href="https://allgameg87.github.io/Molzavod/katalog">Продукты</a>
             <a href="https://allgameg87.github.io/Molzavod/katalog">Каталог</a>
             <a href="https://allgameg87.github.io/Molzavod/onas">О нас</a>
             <a href="https://allgameg87.github.io/Molzavod/kontakt">Контакты</a>
@@ -3026,7 +3026,7 @@
             <div class="product-card">
                 <img src="images/milk.jpg" alt="Молоко" loading="lazy">
                 <div class="product-overlay">
-                    <a href="#products">Подробнее</a>
+                    <a href="https://allgameg87.github.io/Molzavod/katalog">Подробнее</a>
                 </div>
                 <h3>Натуральное молоко</h3>
                 <p>Свежее молоко от наших коров, без добавок.</p>
@@ -3034,7 +3034,7 @@
             <div class="product-card">
                 <img src="images/cheese.jpg" alt="Сыр" loading="lazy">
                 <div class="product-overlay">
-                    <a href="#products">Подробнее</a>
+                    <a href="https://allgameg87.github.io/Molzavod/katalog">Подробнее</a>
                 </div>
                 <h3>Сыры</h3>
                 <p>Ароматные сыры, приготовленные по традиционным рецептам.</p>
@@ -3042,7 +3042,7 @@
             <div class="product-card">
                 <img src="images/yogurt.jpg" alt="Йогурт" loading="lazy">
                 <div class="product-overlay">
-                    <a href="#products">Подробнее</a>
+                    <a href="https://allgameg87.github.io/Molzavod/katalog">Подробнее</a>
                 </div>
                 <h3>Йогурты</h3>
                 <p>Нежные йогурты с натуральными вкусами.</p>
